--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,33 @@
+  /* цвет основного текста rgba(117, 117, 117, 1) */
+
+  /* вторичный цвет текста rgba(33, 33, 33, 1) */
+
+  /* белый цвет #FFFFFF */
+
+  /* синий цвет #2196F3 */
+
+  /* акцент синий цвет #2196F3 */
+
+  /* цвет фона основной #FFFFFF*/
+
+  /* цвет фона вторичный #F5F4FA */
+
+  /* Шапка */
+ 
+ :root{
+    --primary-text-color: rgba(117, 117, 117, 1);
+    --secondary-text-color: rgba(33, 33, 33, 1);
+    --accent-color: #2196F3;
+ }
  
  body{
-     color: rgba(117, 117, 117, 1);
+     color: var(--primary-text-color);
      background-color: #FFFFFF;
+
+     font-family: Roboto, sans-serif;
  }
 
- /* цвет основного текста rgba(33, 33, 33, 1) */
-
- /* вторичный цвет текста rgba(117, 117, 117, 1) */
-
- /* белый цвет #FFFFFF */
-
- /* синий цвет #2196F3 */
-
- /* акцент синий цвет #2196F3 */
-
- /* цвет фона основной #FFFFFF*/
-
- /* цвет фона вторичный #F5F4FA */
-
-/* Шапка */
-
- .visually-hidden {
+ /* .visually-hidden {
      position: absolute;
      width: 1px;
      height: 1px;
@@ -33,13 +40,21 @@
      clip: rect(0 0 0 0);
      overflow: hidden;
  }
-    
+     */
 
  .logo{
      color: #000000;
+     font-family: Raleway;
+        font-weight: 700;
+        font-size: 26px;
+        line-height: 1.2;
+        letter-spacing: 0.03em;
+
+        text-decoration: none;
  }
+
  .img-logo{
-     color: rgba(33, 150, 243, 1);
+     color: var(--accent-color);
  }
 
  ul{
@@ -47,56 +62,128 @@
  }
 
  
- 
  /* site-nav */
  .site-nav .link{
-     color: rgba(33, 33, 33, 1);
- }
- .site-nav .link.current{
-     color: #2196F3;
+     color: var(--secondary-text-color);
+     font-family: 'Roboto';
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+
+        text-decoration: none;
  }
 
- .site-nav .link-studio{
-     color: rgba(33, 150, 243, 1);
+ .site-nav .link.current{
+     color: var(--accent-color);
+    font-family: 'Roboto';
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+
+        text-decoration: none;
  }
+
 
  /* auth-nav */
 .auth-nav .link-mail{
-    color: #757575;
+    color: var(--primary-text-color);
+    text-decoration: none;
 }
 .link-mail:hover,
 .link-mail:focus{
-    color: #2196F3;
+    color: var(--accent-color);
 }
 
 .auth-nav .link-tel{
-    color: #757575;
+    color: var(--primary-text-color);
+    text-decoration: none;
 }
 .link-tel:hover,
 .link-tel:focus{
-    color: #2196F3;
+    color: var(--accent-color);
 }
-    
+    /* Герой */
+    .hero-title{
+        font-family: 'Roboto';
+            font-style: normal;
+            font-weight: 900;
+            font-size: 44px;
+            line-height: 1.4;
+            text-align: center;
+            letter-spacing: 0.06em;
+            text-transform: uppercase;
+            color: #FFFFFF;
+            background: #2F303A;
+    }
     
 
 
  .section-title{
-     color: rgba(33, 33, 33, 1);
+     color: var(--secondary-text-color);
+
+    font-family: 'Roboto';
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.16;
+        text-align: center;
+        letter-spacing: 0.03em;
  }
  
  /* Наши особенности */
  .feature-list .title{
-     color: rgba(33, 33, 33, 1);
+     color: var(--secondary-text-color);
+
+        font-family: 'Roboto';
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
  }
+
+  .feature-list .text{
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+
+ }
+
+
 
  /* Команда */
  .team-list .title{
-     color :rgba(33, 33, 33, 1);
+     color: var(--secondary-text-color);
+        font-style: 400;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.18;
+        letter-spacing: 0.03em;
+ }
+
+ .team-list .team-text{
+     font-family: 'Roboto';
+     font-size: 16px;
+     line-height: 1.18;
+     letter-spacing: 0.03em;
  }
 
  /* Портфолио */
  .list-portfolio .title-portfolio{
-     color: rgba(33, 33, 33, 1);
+     color: var(--secondary-text-color);
+
+        font-family: 'Roboto';
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+ }
+
+ .list-portfolio .portfolio-text{
+        font-size: 16px;
+        line-height: 1.88;
+        letter-spacing: 0.03em;
  }
 
  /* Подвал */
@@ -106,6 +193,7 @@
 
  .address .link{
      color: rgba(255, 255, 255, 0.6);
+    text-decoration: none;
  }
   footer{
       background-color: #2F303A;;
@@ -115,10 +203,26 @@
   .button{
       color: #212121;
       background-color: #F5F4FA;
+      font-family: 'Roboto';
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.6;
+        text-align: center;
+        letter-spacing: 0.03em;
+
+        cursor: pointer;
   }
+
   .primary-button{
       color: #FFFFFF;
       background-color: #2196F3;
+      font-family: 'Roboto';
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.6;
+        letter-spacing: 0.03em;
+
+        cursor: pointer;
   }
 
  
